# clave

./: .gitignore  AGENTS.md  BACKLOG.md  Cargo.toml  README.md  STATUS.md
apps/clave-console/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
apps/clave-console/src/: App.tsx  index.css  vite-env.d.ts
apps/clave-console/src/components/: Devices.tsx  Members.tsx  ui.tsx
apps/clave-console/src/lib/: api.ts
apps/clave-launcher/: README.md  index.html  package-lock.json  package.json  preview.html  tailwind.config.js  vite.config.ts
apps/clave-launcher/src/: App.tsx  index.css  preview.tsx
apps/clave-launcher/src-tauri/: Cargo.toml  tauri.conf.json
apps/clave-launcher/src-tauri/icons/: icon.icns
apps/clave-launcher/src-tauri/icons/android/values/: ic_launcher_background.xml
apps/clave-launcher/src-tauri/src/: lib.rs  main.rs
apps/clave-launcher/src/components/: compact-view.tsx  full-view.tsx
apps/clave-launcher/src/components/ui/: badge.tsx  button.tsx  input.tsx
apps/clave-launcher/src/lib/: app-visual.ts  launch.ts
assets/logos/: preview.html
crates/clave-cli/: Cargo.toml
crates/clave-cli/src/: main.rs
crates/clave-core/: Cargo.toml
crates/clave-core/src/: app.rs  audit.rs  decide.rs  learn.rs  lib.rs  net.rs  overlay.rs  path.rs  policy.rs  web.rs  zone.rs
crates/clave-core/tests/: policy_decisions.rs  properties.rs
crates/clave-daemon/: Cargo.toml  build.rs
crates/clave-daemon-host/: Cargo.toml
crates/clave-daemon-host/src/: lib.rs
crates/clave-daemon/src/: enroll.rs  enroll_client.rs  enrollment_store.rs  lib.rs  mac_main.rs  main.rs  win_main.rs
crates/clave-daemon/tests/: gateway_end_to_end.rs  integration.rs
crates/clave-gateway/: .env.example  Cargo.toml  Dockerfile  docker-compose.yml
crates/clave-gateway/migrations/: 0001_identity.sql  0002_audit.sql  0003_device_cert.sql
crates/clave-gateway/src/: audit_ingest.rs  cert.rs  device_link.rs  error.rs  gateway.rs  http.rs  idp.rs  lib.rs  policy.rs  postgres.rs  scim.rs  server_main.rs  session.rs  store.rs  volume.rs  workos.rs
crates/clave-gateway/tests/: admin.rs  audit_query.rs  control_plane.rs  device_cert.rs  device_link.rs  http.rs  policy.rs  postgres_store.rs  refresh.rs  scim.rs
crates/clave-identity/: Cargo.toml
crates/clave-identity/src/: authz.rs  lib.rs  model.rs
crates/clave-identity/tests/: authz.rs  properties.rs
crates/clave-ipc/: Cargo.toml
crates/clave-ipc/examples/: launcher_smoke.rs
crates/clave-ipc/src/: lib.rs  transport.rs
crates/clave-ipc/tests/: framing.rs  transport.rs
crates/clave-mac/: Cargo.toml  README.md
crates/clave-mac/examples/: clipboard_live.rs  input_live.rs  screen_live.rs
crates/clave-mac/macos/: project.yml
crates/clave-mac/macos/ClaveDaemonHost/: ClaveDaemonHost.entitlements  Info.plist  main.swift
crates/clave-mac/macos/ClaveES/: ClaveES.entitlements  Info.plist  main.swift
crates/clave-mac/macos/ClaveES.xcodeproj/: project.pbxproj
crates/clave-mac/macos/ClaveESExtension/: ClaveESExtension.entitlements  Info.plist  main.swift
crates/clave-mac/macos/scripts/: make-dev-cert.sh
crates/clave-mac/src/: clipboard.rs  edge.rs  es_gate.rs  input.rs  keychain.rs  launch.rs  lib.rs  platform.rs  screen.rs  se_seal.rs  sip.rs  volume.rs
crates/clave-mac/swift/: ClaveEndpointSecurityClient.swift  ClaveProxyProvider.swift
crates/clave-net/: Cargo.toml
crates/clave-net/src/: lib.rs  loopback.rs  provider.rs  router.rs  wireguard.rs
crates/clave-net/tests/: split_router_wireguard.rs
crates/clave-platform/: Cargo.toml
crates/clave-platform/src/: enforcement.rs  lib.rs  traits.rs  types.rs
crates/clave-proto/: Cargo.toml
crates/clave-proto/src/: audit.rs  command.rs  enroll.rs  lib.rs  link.rs  mtls.rs  sign.rs  transport.rs  verify.rs
crates/clave-proto/tests/: audit.rs  gateway.rs  properties.rs
crates/clave-testkit/: Cargo.toml
crates/clave-testkit/src/: lib.rs
crates/clave-volume/: Cargo.toml
crates/clave-volume/src/: container.rs  keys.rs  lib.rs  seal.rs  store.rs  volume.rs  xts.rs
crates/clave-volume/tests/: crash.rs  lifecycle.rs  properties.rs
crates/clave-win/: Cargo.toml  README.md  build.rs
crates/clave-win/src/: clipboard.rs  divert.rs  edge.rs  input.rs  job.rs  lib.rs  mount.rs  platform.rs  screen.rs
docs/: 00-architecture-overview.md  01-threat-model.md  02-process-supervision.md  03-app-subsystem-virtualization.md  04-encrypted-volume.md  05-clipboard-dlp.md  06-input-isolation.md  07-screen-capture-protection.md  08-network-split-tunnel.md  09-visual-border-overlay.md  10-policy-engine-and-ipc.md  11-rust-workspace-layout.md  12-signing-distribution-deployment.md  13-build-roadmap.md  14-production-and-development-platform-requirements.md  15-identity-and-enrollment-auth.md  16-third-party-network-providers.md  17-web-app-auth-and-browser-containment.md  18-activity-tracking-and-monitoring.md  19-ai-gateway.md  20-disk-storage-layer.md  21-computer-use-and-workflow-automation.md  GLOSSARY.md  README.md  appendix-a-windows-primitives.md  appendix-b-macos-primitives.md  appendix-c-references.md
