[package]
name = "clave-cli"
version = "0.1.0"
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }
authors = { workspace = true }
description = "Clave admin / diagnostics CLI: enforcement posture + policy classifier dry-runs."

[[bin]]
name = "clave-cli"
path = "src/main.rs"

[dependencies]
clave-core = { path = "../clave-core" }
clave-platform = { path = "../clave-platform" }
clave-ipc = { path = "../clave-ipc" }
clave-proto = { path = "../clave-proto" }
# Load a policy bundle (JSON) for the launcher subcommands.
serde_json = "1"
# The `audit` subcommand reaches the running daemon over the launcher IPC socket.
tokio = { version = "1", features = ["rt", "macros", "net", "time"] }

# The OS adapter is linked per target (doc 11 §2), to surface its enforcement posture.
[target.'cfg(target_os = "macos")'.dependencies]
clave-mac = { path = "../clave-mac" }

[target.'cfg(target_os = "windows")'.dependencies]
clave-win = { path = "../clave-win" }
