[package]
name = "clave-core"
version = "0.1.0"
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }
authors = { workspace = true }
description = "Clave portable policy brain: zone registry, DLP decision matrices, audit schema."

[dependencies]
clave-platform = { path = "../clave-platform" }
serde = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
