[package]
name = "clave-daemon-host"
version = "0.1.0"
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }
authors = { workspace = true }
description = "macOS FFI shim: the #[no_mangle] entry point the signed ClaveDaemonHost app links, calling into clave-daemon's mac startup. Kept out of clave-daemon itself, which forbids unsafe code — unsafe (here, just the FFI export) stays confined to this OS-adapter boundary, same as clave-mac."

[lib]
crate-type = ["staticlib"]

[target.'cfg(target_os = "macos")'.dependencies]
clave-daemon = { path = "../clave-daemon" }
