[package]
name = "clave-daemon"
version = "0.1.0"
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }
authors = { workspace = true }
description = "Clave privileged service: hosts the policy brain and drives the platform adapters."

[features]
# The device-code enrollment client's HTTP transport (reqwest). Off by default so the portable
# orchestration + tests build with no network stack.
enroll-http = ["dep:reqwest"]

[dependencies]
clave-platform = { path = "../clave-platform" }
clave-core = { path = "../clave-core" }
clave-ipc = { path = "../clave-ipc" }
clave-net = { path = "../clave-net" }
clave-volume = { path = "../clave-volume" }
clave-proto = { path = "../clave-proto" }
arc-swap = "1"
serde = { workspace = true }
postcard = { version = "1", features = ["use-std"] }
rand = "0.8"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "sync", "net", "time"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"], optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
clave-mac = { path = "../clave-mac" }
serde_json = "1"

[target.'cfg(target_os = "windows")'.dependencies]
clave-win = { path = "../clave-win" }

[dev-dependencies]
clave-testkit = { path = "../clave-testkit" }
clave-proto = { path = "../clave-proto" }
clave-gateway = { path = "../clave-gateway" }
clave-identity = { path = "../clave-identity" }
serde_json = "1"
