[package]
name = "clave-identity"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "Clave control-plane identity core: portable, fail-closed login / invitation / enrollment authorization (doc 15)."

[dependencies]
serde = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
