[package]
name = "clave-platform"
version = "0.1.0"
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }
authors = { workspace = true }
description = "Clave platform seam: portable value types and OS-capability traits."

[dependencies]
serde = { workspace = true }
