[package]
name = "clave-win"
version = "0.1.0"
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }
authors = { workspace = true }
description = "Windows platform adapter for Clave: Job Object containment, clipboard DLP, WinDivert split-tunnel."

[dependencies]
clave-platform = { path = "../clave-platform" }
clave-core = { path = "../clave-core" }
clave-net = { path = "../clave-net" }

# Real Windows dependencies live here so non-Windows CI never fetches or compiles them.
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_DataExchange",
    "Win32_System_JobObjects",
    "Win32_System_LibraryLoader",
    "Win32_System_Ole",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
] }
